--- a/VersalityClub/ios/Launch.xib
+++ b/VersalityClub/ios/Launch.xib
@@ -16,15 +16,15 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_for_launch_screen.png" translatesAutoresizingMaskIntoConstraints="NO" id="KDf-Hj-MeD">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                    <rect key="frame" x="80" y="80" width="320" height="320"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="KDf-Hj-MeD" secondAttribute="bottom" id="mXU-Is-pNf"/>
-                <constraint firstItem="KDf-Hj-MeD" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="vRG-e8-Iu3"/>
-                <constraint firstAttribute="trailing" secondItem="KDf-Hj-MeD" secondAttribute="trailing" id="wg4-l3-gsN"/>
-                <constraint firstItem="KDf-Hj-MeD" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="yEu-qw-cCX"/>
+                <constraint firstItem="KDf-Hj-MeD" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="80" id="Hb0-gx-BSR"/>
+                <constraint firstAttribute="bottom" secondItem="KDf-Hj-MeD" secondAttribute="bottom" constant="80" id="Ma2-fa-Cv0"/>
+                <constraint firstAttribute="trailing" secondItem="KDf-Hj-MeD" secondAttribute="trailing" constant="80" id="XqB-fz-Iyh"/>
+                <constraint firstItem="KDf-Hj-MeD" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="80" id="mNV-3r-1cn"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
