Dealing with app store guidelines. Know you don't have to enable location, backround refresh and register or log in to use app. Added guest log in.

--- a/VersalityClub/versalityclub.qrc
+++ b/VersalityClub/versalityclub.qrc
@@ -101,5 +101,6 @@
         <file>icons/promotion_marker.svg</file>
         <file>icons/dummy_footer_button_substrate.svg</file>
         <file>qml/SettingsHelperPopup.qml</file>
+        <file>qml/GuestToastMessage.qml</file>
     </qresource>
 </RCC>
